syntax="proto3";

package grpcPb;

option go_package="services/grpcPb";

// Order
message PostOrderRequest{
    string newOrder = 1;
}
message PostOrderResponse{
    string status = 1;
}

message OrderDetailRequest {
    string OrderNumber = 1;
}
message OrderDetailResponse {
    string orderDetail = 1;
}

message PopularDishResponse {
    string DishName = 1;
}
message PopularDishRequest {
    string CityName = 1;
}

message UpdateDishRequest {
    int64 orderId = 1;
    string updatedDish = 2;
}
message UpdateDishResponse {
    string status = 1;
}

// Customer
message CustomersCountRequest {}
message CustomersCountResponse {
    int64 count = 1;
}

message AddCustomerRequest {
    string newCustomer = 1;
}
message StatusResponse {
    string status = 1;
}

message CustomerRequest {
    string CustomerId = 1;
}
message CustomerResponse {
    string CustomerData = 1;
}


// Restaurant
message Item {
    uint32 id=1;
    string name = 2;
    string cuisine = 3;
    float cost = 4;
    uint32 quantity = 5;
}

message Address{
    string houseNo = 1;
    string street = 2;
    string city = 3;
    string pin = 4;
}

message PostRestaurantRequest{
    int64 id = 1;
    string name = 2;
    repeated Item items = 3;
    Address restaurantAddress = 4;
    bool status = 5;
}
message ItemsListResponse{
    repeated Item items = 1;
}
message DeleteItemRequest{
    int64 restaurantId = 1;
    string itemName = 2;
}
message RestaurantRequest{
    int64 restaurantId = 1;
}
message GenericResponse{
    string status = 1;
    string message=2;
}
message UpdateItemRequest{
    int64 restaurantId = 1;
    Item itemToBeUpdates = 2;
}
message ItemsInRangeRequest{
    float minRange = 1;
    float maxRange = 2;
    int64 restaurantId = 3;
}


// Order
message CreateOrderRequest {
    uint32 resId=1;
    uint32 custId=2;
    repeated Item Items=3;
    float discount=4;
    Address address=5;
}

message CreateOrderResponse {
    bool status=1;
    string message=2;
    uint32 orderId=3;
}

message UpdateOrderItemRequest {
    uint32 orderId=1;
    uint32 custId=2;
    uint32 itemId=3;
    uint32 quantity=4;
}

message UpdateOrderItemResponse {
    bool status=1;
    string message=2;
}

message OrdersCountRequest{}

message OrdersCountResponse{
    int64 count=1;
}

message GetOrderDetailsRequest {
    uint32 orderId=1;
}

message GetOrderDetailsResponse {
    string orderDetails=1;
}

service GRPCService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse){}
    rpc UpdateOrderItem(UpdateOrderItemRequest) returns (UpdateOrderItemResponse){}
    rpc GetOrdersCount (OrdersCountRequest) returns (OrdersCountResponse) {}
    rpc GetOrderDetails (GetOrderDetailsRequest) returns (GetOrderDetailsResponse) {}

    // Customer
    rpc GetCustomersCount (CustomersCountRequest) returns (CustomersCountResponse){}
    rpc GetCustomer (CustomerRequest) returns (CustomerResponse){}
    rpc DeleteCustomer (CustomerRequest) returns (CustomerResponse) {}
    rpc AddCustomer (AddCustomerRequest) returns (StatusResponse) {}

    // Restaurant
    rpc PostRestaurant(PostRestaurantRequest) returns (GenericResponse){}
    rpc DeleteItem(DeleteItemRequest) returns (GenericResponse){}
    rpc DeleteRestaurant(RestaurantRequest)returns(GenericResponse){}
    rpc UpdateItem(UpdateItemRequest) returns(GenericResponse){}
    rpc GetCountOfRestaurant(OrdersCountRequest) returns (OrdersCountResponse){}
    rpc GetRestaurant(RestaurantRequest) returns (PostRestaurantRequest){}
    rpc GetItemsOfRestaurant(RestaurantRequest) returns(ItemsListResponse){}
    rpc GetItemsInRange(ItemsInRangeRequest) returns(ItemsListResponse){}
}